# maa-streamlit

./: .envrc  .gitignore  Dashboard.py  README.md  flake.nix  justfile  live.py  pyproject.toml  requirements.in  requirements.txt  run  run_example  run_example.ps1  run_with_mumu_example.ps1  test.py
.streamlit/: config.toml
config_example/: auth.toml
config_example/infrast/: X.json
config_example/tasks/: award.toml  close.toml  depot.toml  infrast_X.toml  mall.toml  reclamation.toml  recruit.toml  roguelike_mizuki.toml  roguelike_sami.toml  start.toml
config_example/tasksets/: X_00.toml  Y_00.toml
docs/config_example/: static.toml
docs/config_example/presets/: X.toml
docs/config_example/tasks/: close.toml  fight.toml  fight_auto.toml  infrast.toml  reclamation.toml  recruit_conservative.toml
docs/config_example/tasksets/: X_00.toml
maa/: __init__.py
maa/asst/: asst.py  updater.py  utils.py
maa_streamlit/: __init__.py  adb.py  background.py  config.py  consts.py  data.py  globals.py  schedule.py  utils.py
src/maa/: README  __init__.py
src/maa/asst/: updater.py
src/maa_streamlit/: __init__.py  adb.py  consts.py  control.py  data.py  globals.py  maa.py  maa_streamlit.py  schedule.py  utils.py
tests/: test_config.py  test_data.py  test_maa_streamlit.py
