[tool.poetry]
name = "maa-streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "maa_streamlit"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
streamlit-autorefresh = "^1.0.1"
pydantic = "^2.6.1"
psutil = "^5.9.8"
streamlit-extras = "^0.4.0"
deepmerge = "^1.1.1"
loguru = "^0.7.2"
streamlit-authenticator = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
